# ros_tello_model

./: CMakeLists.txt  README.md  package.xml
src/: passive_tello_node.cpp
